# yazproxy

./: .cvsignore  .drone.yml  .gitignore  Dockerfile  IDMETA  Makefile.am  NEWS  README  buildconf.sh  configure.ac  configure.in  docker-entrypoint.sh  usemarcon.m4  yaz.m4  yazpp.m4  yazproxy.spec  yazproxy.spec.in
.github/workflows/: build-yazproxy.yaml
debian/: changelog  control  copyright  libyazproxy-dev.install  libyazproxy.install  libyazproxy1.install  libyazproxy1.postinst  libyazproxy2-dev.install  postinst  rules  yazproxy-doc.install  yazproxy.install  yazproxy.manpages
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  entities.ent  installation.xml  introduction.xml  license.xml  local.ent.in  proxy.xml  reference.xml  using.xml  yaz-proxy-man.sgml  yaz-proxy-man.xml  yaz-proxy-ref.xml  yazhtml.dsl.in  yazphp.dsl.in  yazprint.dsl.in  yazproxy.xml  yazproxy.xml.in
etc/: MARC21slim2DC.xsl  MARC21slim2MODS3.xsl  MARC21slim2SRWDC.xsl  Makefile.am  config-mafi2ma.xml  config-modules.xml  config.xml  explain.xml  exslttest.xsl  fennica.xml  helka.sh  helka.xml  pqf.properties  voyager.xml  yaz-proxy.sh  yazproxy.xsd  yazproxyctl.sh
include/: Makefile.am
include/yazproxy/: Makefile.am  bw.h  limit-connect.h  module.h  proxy.h
src/: .cvsignore  .gitignore  Makefile.am  cdetails.cpp  charset-converter.cpp  limit-connect.cpp  mod_helsinki.cpp  mod_sample.cpp  modules.cpp  msg-thread.cpp  msg-thread.h  p2.cpp  p2_config.cpp  p2_config.h  p2_frontend.cpp  p2_frontend.h  p2_msg.cpp  p2_xmlerror.cpp  p2_xmlerror.h  proxyp.h  t-server.cpp  tstthreads.cpp  yaz-bw.cpp  yaz-proxy-config.cpp  yaz-proxy-main.cpp  yaz-proxy.cpp  yaz-usemarcon.cpp
win/: makefile
