AC_INIT(configure.in)
AM_INIT_AUTOMAKE(yazproxy,0.8)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_HEADER_STDC
AM_DISABLE_SHARED
AM_PROG_LIBTOOL

YAZPP_INIT(threads,0.8)
YAZ_DOC

AC_CHECK_FUNCS(setrlimit getrlimit gettimeofday)
dnl
dnl ----- libXSLT
AC_SUBST(XSLT_LIBS)
AC_SUBST(XSLT_CFLAGS)
xsltdir=yes
AC_ARG_WITH(xslt, [  --with-xslt[=PREFIX]      use libxslt in PREFIX],[xsltdir=$withval])
if test "$xsltdir" = "yes"; then
	for d in /usr /usr/local; do
		if test -x $d/bin/xslt-config; then
			xsltdir=$d
		fi
	done
fi
if test "$xsltdir" != "no"; then
	AC_MSG_CHECKING(for libXSLT)
	if test -x $xsltdir/bin/xslt-config; then
		XSLT_LIBS=`$xsltdir/bin/xslt-config --libs`
		XSLT_CFLAGS=`$xsltdir/bin/xslt-config --cflags`
		XSLT_VER=`$xsltdir/bin/xslt-config --version`
		AC_MSG_RESULT($XSLT_VER)
		AC_DEFINE(HAVE_XSLT)
	else
		AC_MSG_RESULT(Not found)
	fi
fi

AC_SUBST(YAZPROXY_SRC_ROOT)
AC_SUBST(YAZPROXY_BUILD_ROOT)
YAZPROXY_SRC_ROOT=`cd ${srcdir}; pwd`
YAZPROXY_BUILD_ROOT=`pwd`

AC_OUTPUT([
	Makefile
	src/Makefile
	include/Makefile
	include/yazproxy/Makefile
	doc/Makefile
	doc/yazproxy.xml
	doc/yazprint.dsl doc/yazphp.dsl doc/yazhtml.dsl
        doc/tkl.xsl
	etc/Makefile
])
