# $Id: Makefile.am,v 1.5 2004-12-03 14:28:18 adam Exp $

proxydatadir=$(datadir)/yazproxy
proxydata_DATA = \
 MARC21slim2DC.xsl \
 MARC21slim2SRWDC.xsl \
 MARC21slim2MODS.xsl \
 MARC21slim2MODS3.xsl \
 MARC21slim2RDFDC.xsl \
 MARC21slimUtils.xsl \
 config.xml \
 explain.xml \
 voyager.xml \
 config-mafi2ma.xml \
 pqf.properties \
 yazproxy.xsd \
 zeerex-2.0.xsd \
 yazproxyctl.sh

EXTRA_DIST = $(proxydata_DATA)

noinst_SCRIPTS = yazproxyctl.sh
