
proxydatadir=$(datadir)/yazproxy
proxydata_DATA = \
 MARC21slim2DC.xsl \
 MARC21slim2SRWDC.xsl \
 MARC21slim2MODS.xsl \
 MARC21slim2MODS3.xsl \
 MARC21slim2RDFDC.xsl \
 MARC21slimUtils.xsl \
 exslttest.xsl \
 config.xml \
 explain.xml \
 voyager.xml \
 config-mafi2ma.xml \
 config-modules.xml \
 pqf.properties \
 yazproxy.xsd \
 zeerex-2.0.xsd 

proxydata_SCRIPTS = yazproxyctl.sh

EXTRA_DIST = $(proxydata_DATA) $(proxydata_SCRIPTS)

